[package]
name = "l64tool"
version = "0.2.0"
edition = "2021"
description = "Farming Simulator .l64 encoder/decoder — compile, encrypt, decrypt, and decompile Luau/LuaJIT scripts"

[[bin]]
name = "l64tool"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
walkdir = "2"
lantern = { git = "https://github.com/Paint-a-Farm/lantern.git" }
mlua = { version = "0.10", features = ["luajit", "vendored"] }
bytemuck = "1.13"

[build-dependencies]
cc = "1"
